check match function

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <body>
     <div class="deck">
-        <div class="hidden note one"></div>
-        <div class="hidden note two"></div>
-        <div class="hidden note three"></div>
-        <div class="hidden note four"></div>
-        <div class="hidden note one"></div>
-        <div class="hidden note two"></div>
-        <div class="hidden note three"></div>
-        <div class="hidden note four"></div>
+        <div class="hidden note one" type="first"></div>
+        <div class="hidden note two" type="second"></div>
+        <div class="hidden note three" type="third"></div>
+        <div class="hidden note four" type="fourth"></div>
+        <div class="hidden note one" type="first"></div>
+        <div class="hidden note two" type="second"></div>
+        <div class="hidden note three" type="third"></div>
+        <div class="hidden note four" type="fourth"></div>
     </div>
 
     <script type="text/javascript" src="script.js"></script>
