changed classes and added jQuery

--- a/index.html
+++ b/index.html
@@ -11,16 +11,23 @@
 
 <body>
     <div class="deck">
-        <div class="hidden note one" type="first"></div>
-        <div class="hidden note two" type="second"></div>
-        <div class="hidden note three" type="third"></div>
-        <div class="hidden note four" type="fourth"></div>
-        <div class="hidden note one" type="first"></div>
-        <div class="hidden note two" type="second"></div>
-        <div class="hidden note three" type="third"></div>
-        <div class="hidden note four" type="fourth"></div>
+        <div class="card notMatched"></div>
+        <div class="card notMatched"></div>
+        <div class="card notMatched"></div>
+        <div class="card notMatched"></div>
+        <div class="card notMatched"></div>
+        <div class="card notMatched"></div>
+        <div class="card notMatched"></div>
+        <div class="card notMatched"></div>
+        <div class="card notMatched"></div>
+        <div class="card notMatched"></div>
+        <div class="card notMatched"></div>
+        <div class="card notMatched"></div>
     </div>
-
+<script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
     <script type="text/javascript" src="script.js"></script>
 </body>
 
