scss animate files added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="deck">
-        <div class="card notMatched"></div>
+        <div class="card notMatched animated bounce infinite"></div>
         <div class="card notMatched"></div>
         <div class="card notMatched"></div>
         <div class="card notMatched"></div>
