--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 
 <body>
     <div class="deck">
-        <div class="card notMatched animated bounce infinite"></div>
-        <div class="card notMatched"></div>
-        <div class="card notMatched"></div>
-        <div class="card notMatched"></div>
-        <div class="card notMatched"></div>
-        <div class="card notMatched"></div>
-        <div class="card notMatched"></div>
-        <div class="card notMatched"></div>
-        <div class="card notMatched"></div>
-        <div class="card notMatched"></div>
-        <div class="card notMatched"></div>
-        <div class="card notMatched"></div>
+        <div class="card notMatched hidden"></div>
+        <div class="card notMatched hidden"></div>
+        <div class="card notMatched hidden"></div>
+        <div class="card notMatched hidden"></div>
+        <div class="card notMatched hidden"></div>
+        <div class="card notMatched hidden"></div>
+        <div class="card notMatched hidden"></div>
+        <div class="card notMatched hidden"></div>
+        <div class="card notMatched hidden"></div>
+        <div class="card notMatched hidden"></div>
+        <div class="card notMatched hidden"></div>
+        <div class="card notMatched hidden"></div>
     </div>
 <script
   src="https://code.jquery.com/jquery-3.3.1.js"
