--- a/index.html
+++ b/index.html
@@ -11,18 +11,54 @@
 
 <body>
     <div class="deck">
-        <div class="card notMatched faceDown"></div>
-        <div class="card notMatched faceDown"></div>
-        <div class="card notMatched faceDown"></div>
-        <div class="card notMatched faceDown"></div>
-        <div class="card notMatched faceDown"></div>
-        <div class="card notMatched faceDown"></div>
-        <div class="card notMatched faceDown"></div>
-        <div class="card notMatched faceDown"></div>
-        <div class="card notMatched faceDown"></div>
-        <div class="card notMatched faceDown"></div>
-        <div class="card notMatched faceDown"></div>
-        <div class="card notMatched faceDown"></div>
+        <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back"></figure>
+        </div>
+        <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back"></figure>
+        </div>
+        <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back"></figure>
+        </div>
+        <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back"></figure>
+        </div>
+        <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back"></figure>
+        </div>
+        <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back"></figure>
+        </div>
+        <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back"></figure>
+        </div>
+        <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back"></figure>
+        </div>
+        <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back"></figure>
+        </div>
+        <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back"></figure>
+        </div>
+        <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back"></figure>
+        </div>
+        <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back"></figure>
+        </div>
     </div>
 <script
   src="https://code.jquery.com/jquery-3.3.1.js"
