added turn counter

--- a/index.html
+++ b/index.html
@@ -10,60 +10,74 @@
 </head>
 
 <body>
-    <div class="deck">
-        <div class="card notMatched">
-            <figure class="faceDown"></figure>
-            <figure class="back"></figure>
+    <header>
+        <h1>Music Memory!</h1>
+        <h2>Number of turns: <span id="counter">0</span></h2>
+    </header>
+    <nav>
+        <div>
+            <input type="checkbox" id="sounds" checked>
+            <label for="sounds">Sounds</label>
         </div>
-        <div class="card notMatched">
-            <figure class="faceDown"></figure>
-            <figure class="back"></figure>
+        <div>
+            <input type="checkbox" id="colours" checked>
+            <label for="colours">Colours</label>
         </div>
-        <div class="card notMatched">
-            <figure class="faceDown"></figure>
-            <figure class="back"></figure>
+        <button id="reset">Reset</button>
+    </nav>
+    <section>
+        <div class="deck">
+            <div class="card notMatched">
+                <figure class="faceDown"></figure>
+                <figure class="back"></figure>
+            </div>
+            <div class="card notMatched">
+                <figure class="faceDown"></figure>
+                <figure class="back"></figure>
+            </div>
+            <div class="card notMatched">
+                <figure class="faceDown"></figure>
+                <figure class="back"></figure>
+            </div>
+            <div class="card notMatched">
+                <figure class="faceDown"></figure>
+                <figure class="back"></figure>
+            </div>
+            <div class="card notMatched">
+                <figure class="faceDown"></figure>
+                <figure class="back"></figure>
+            </div>
+            <div class="card notMatched">
+                <figure class="faceDown"></figure>
+                <figure class="back"></figure>
+            </div>
+            <div class="card notMatched">
+                <figure class="faceDown"></figure>
+                <figure class="back"></figure>
+            </div>
+            <div class="card notMatched">
+                <figure class="faceDown"></figure>
+                <figure class="back"></figure>
+            </div>
+            <div class="card notMatched">
+                <figure class="faceDown"></figure>
+                <figure class="back"></figure>
+            </div>
+            <div class="card notMatched">
+                <figure class="faceDown"></figure>
+                <figure class="back"></figure>
+            </div>
+            <div class="card notMatched">
+                <figure class="faceDown"></figure>
+                <figure class="back"></figure>
+            </div>
+            <div class="card notMatched">
+                <figure class="faceDown"></figure>
+                <figure class="back"></figure>
+            </div>
         </div>
-        <div class="card notMatched">
-            <figure class="faceDown"></figure>
-            <figure class="back"></figure>
-        </div>
-        <div class="card notMatched">
-            <figure class="faceDown"></figure>
-            <figure class="back"></figure>
-        </div>
-        <div class="card notMatched">
-            <figure class="faceDown"></figure>
-            <figure class="back"></figure>
-        </div>
-        <div class="card notMatched">
-            <figure class="faceDown"></figure>
-            <figure class="back"></figure>
-        </div>
-        <div class="card notMatched">
-            <figure class="faceDown"></figure>
-            <figure class="back"></figure>
-        </div>
-        <div class="card notMatched">
-            <figure class="faceDown"></figure>
-            <figure class="back"></figure>
-        </div>
-        <div class="card notMatched">
-            <figure class="faceDown"></figure>
-            <figure class="back"></figure>
-        </div>
-        <div class="card notMatched">
-            <figure class="faceDown"></figure>
-            <figure class="back"></figure>
-        </div>
-        <div class="card notMatched">
-            <figure class="faceDown"></figure>
-            <figure class="back"></figure>
-        </div>
-    </div>
-<script
-  src="https://code.jquery.com/jquery-3.3.1.js"
-  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-  crossorigin="anonymous"></script>
+    </section>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="script.js"></script>
 </body>
 
