--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </header>
     <nav>
         <div>
-            <input type="checkbox" id="sounds" checked>
+            <input type="checkbox" id="sounds" name="sounds" checked>
             <label for="sounds">Sounds</label>
         </div>
         <div>
-            <input type="checkbox" id="colours" checked>
+            <input type="checkbox" id="colours" name="colours" checked>
             <label for="colours">Colours</label>
         </div>
         <button id="reset">Reset</button>
