--- a/index.html
+++ b/index.html
@@ -15,63 +15,57 @@
         <h2>Number of turns: <span id="counter">0</span></h2>
     </header>
     <nav>
-        <div>
-            <input type="checkbox" id="sounds" name="sounds" checked>
-            <label for="sounds">Sounds</label>
-        </div>
-        <div>
-            <input type="checkbox" id="colours" name="colours" checked>
-            <label for="colours">Colours</label>
-        </div>
-        <button id="reset">Reset</button>
+        <button class="" id="justSounds-btn">Just Sounds</button>
+        <button id="justColours-btn">Just Colours</button>
+        <button id="reset-btn">Reset</button>
     </nav>
     <section>
         <div class="deck">
-            <div class="card notMatched">
+            <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back"></figure>
             </div>
-            <div class="card notMatched">
+            <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back"></figure>
             </div>
-            <div class="card notMatched">
+            <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back"></figure>
             </div>
-            <div class="card notMatched">
+            <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back"></figure>
             </div>
-            <div class="card notMatched">
+            <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back"></figure>
             </div>
-            <div class="card notMatched">
+            <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back"></figure>
             </div>
-            <div class="card notMatched">
+            <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back"></figure>
             </div>
-            <div class="card notMatched">
+            <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back"></figure>
             </div>
-            <div class="card notMatched">
+            <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back"></figure>
             </div>
-            <div class="card notMatched">
+            <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back"></figure>
             </div>
-            <div class="card notMatched">
+            <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back"></figure>
             </div>
-            <div class="card notMatched">
+            <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back"></figure>
             </div>
