--- a/index.html
+++ b/index.html
@@ -15,59 +15,59 @@
         <h2>Number of turns: <span id="counter">0</span></h2>
     </header>
     <nav>
-        <button class="" id="justSounds-btn">Just Sounds</button>
-        <button id="justColours-btn">Just Colours</button>
+        <button class="" id="easy-btn">Easy</button>
+        <button id="hard-btn">Hard</button>
         <button id="reset-btn">Reset</button>
     </nav>
     <section>
         <div class="deck">
             <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
-                <figure class="back"></figure>
+                <figure class="back spinBack"></figure>
             </div>
             <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
-                <figure class="back"></figure>
+                <figure class="back spinBack"></figure>
             </div>
             <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
-                <figure class="back"></figure>
+                <figure class="back spinBack"></figure>
             </div>
             <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
-                <figure class="back"></figure>
+                <figure class="back spinBack"></figure>
             </div>
             <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
-                <figure class="back"></figure>
+                <figure class="back spinBack"></figure>
             </div>
             <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
-                <figure class="back"></figure>
+                <figure class="back spinBack"></figure>
             </div>
             <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
-                <figure class="back"></figure>
+                <figure class="back spinBack"></figure>
             </div>
             <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
-                <figure class="back"></figure>
+                <figure class="back spinBack"></figure>
             </div>
             <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
-                <figure class="back"></figure>
+                <figure class="back spinBack"></figure>
             </div>
             <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
-                <figure class="back"></figure>
+                <figure class="back spinBack"></figure>
             </div>
             <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
-                <figure class="back"></figure>
+                <figure class="back spinBack"></figure>
             </div>
             <div class="card soundOn notMatched">
                 <figure class="faceDown"></figure>
-                <figure class="back"></figure>
+                <figure class="back spinBack"></figure>
             </div>
         </div>
     </section>
