vendor prefixes to try mobile

--- a/index.html
+++ b/index.html
@@ -15,57 +15,57 @@
         <h2>Number of turns: <span id="counter">0</span></h2>
     </header>
     <nav>
-        <button class="" id="easy-btn">Easy</button>
+        <button id="easy-btn">Easy</button>
         <button id="hard-btn">Hard</button>
         <button id="reset-btn">Reset</button>
     </nav>
     <section>
         <div class="deck">
-            <div class="card soundOn notMatched">
+            <div class="card notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back spinBack"></figure>
             </div>
-            <div class="card soundOn notMatched">
+            <div class="card notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back spinBack"></figure>
             </div>
-            <div class="card soundOn notMatched">
+            <div class="card notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back spinBack"></figure>
             </div>
-            <div class="card soundOn notMatched">
+            <div class="card notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back spinBack"></figure>
             </div>
-            <div class="card soundOn notMatched">
+            <div class="card notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back spinBack"></figure>
             </div>
-            <div class="card soundOn notMatched">
+            <div class="card notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back spinBack"></figure>
             </div>
-            <div class="card soundOn notMatched">
+            <div class="card notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back spinBack"></figure>
             </div>
-            <div class="card soundOn notMatched">
+            <div class="card notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back spinBack"></figure>
             </div>
-            <div class="card soundOn notMatched">
+            <div class="card notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back spinBack"></figure>
             </div>
-            <div class="card soundOn notMatched">
+            <div class="card notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back spinBack"></figure>
             </div>
-            <div class="card soundOn notMatched">
+            <div class="card notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back spinBack"></figure>
             </div>
-            <div class="card soundOn notMatched">
+            <div class="card notMatched">
                 <figure class="faceDown"></figure>
                 <figure class="back spinBack"></figure>
             </div>
