--- a/index.html
+++ b/index.html
@@ -10,67 +10,79 @@
 </head>
 
 <body>
-    <header>
-        <h1>Music Memory!</h1>
-        <h2>Number of turns: <span id="counter">0</span></h2>
-    </header>
-    <nav>
-        <button id="easy-btn">Easy</button>
-        <button id="hard-btn">Hard</button>
-        <button id="reset-btn">Reset</button>
-    </nav>
-    <section>
-        <div class="deck">
-            <div class="card notMatched">
-                <figure class="faceDown"></figure>
-                <figure class="back spinBack"></figure>
+    <div class="page-wrapper">
+
+        <header>
+            <div class="title-text">
+                <h1 class="title">Music Memory!</h1>
+                <h2 class="lead">Find the matching pairs!</h2>
             </div>
-            <div class="card notMatched">
-                <figure class="faceDown"></figure>
-                <figure class="back spinBack"></figure>
+        </header>
+        <section>
+            <div class="counter">
+                <h3 class="counter-text">Number of turns: <span id="counter">0</span></h2>
             </div>
-            <div class="card notMatched">
-                <figure class="faceDown"></figure>
-                <figure class="back spinBack"></figure>
+            <div class="buttons">
+                <button id="easy-btn">Easy</button>
+                <button id="hard-btn">Hard</button>
+                <button id="reset-btn">Reset</button>
             </div>
-            <div class="card notMatched">
-                <figure class="faceDown"></figure>
-                <figure class="back spinBack"></figure>
+        </section>
+        <section>
+            <div class="game">
+                <div class="deck">
+                    <div class="card notMatched">
+                        <figure class="faceDown"></figure>
+                        <figure class="back spinBack"></figure>
+                    </div>
+                    <div class="card notMatched">
+                        <figure class="faceDown"></figure>
+                        <figure class="back spinBack"></figure>
+                    </div>
+                    <div class="card notMatched">
+                        <figure class="faceDown"></figure>
+                        <figure class="back spinBack"></figure>
+                    </div>
+                    <div class="card notMatched">
+                        <figure class="faceDown"></figure>
+                        <figure class="back spinBack"></figure>
+                    </div>
+                    <div class="card notMatched">
+                        <figure class="faceDown"></figure>
+                        <figure class="back spinBack"></figure>
+                    </div>
+                    <div class="card notMatched">
+                        <figure class="faceDown"></figure>
+                        <figure class="back spinBack"></figure>
+                    </div>
+                    <div class="card notMatched">
+                        <figure class="faceDown"></figure>
+                        <figure class="back spinBack"></figure>
+                    </div>
+                    <div class="card notMatched">
+                        <figure class="faceDown"></figure>
+                        <figure class="back spinBack"></figure>
+                    </div>
+                    <div class="card notMatched">
+                        <figure class="faceDown"></figure>
+                        <figure class="back spinBack"></figure>
+                    </div>
+                    <div class="card notMatched">
+                        <figure class="faceDown"></figure>
+                        <figure class="back spinBack"></figure>
+                    </div>
+                    <div class="card notMatched">
+                        <figure class="faceDown"></figure>
+                        <figure class="back spinBack"></figure>
+                    </div>
+                    <div class="card notMatched">
+                        <figure class="faceDown"></figure>
+                        <figure class="back spinBack"></figure>
+                    </div>
+                </div>
             </div>
-            <div class="card notMatched">
-                <figure class="faceDown"></figure>
-                <figure class="back spinBack"></figure>
-            </div>
-            <div class="card notMatched">
-                <figure class="faceDown"></figure>
-                <figure class="back spinBack"></figure>
-            </div>
-            <div class="card notMatched">
-                <figure class="faceDown"></figure>
-                <figure class="back spinBack"></figure>
-            </div>
-            <div class="card notMatched">
-                <figure class="faceDown"></figure>
-                <figure class="back spinBack"></figure>
-            </div>
-            <div class="card notMatched">
-                <figure class="faceDown"></figure>
-                <figure class="back spinBack"></figure>
-            </div>
-            <div class="card notMatched">
-                <figure class="faceDown"></figure>
-                <figure class="back spinBack"></figure>
-            </div>
-            <div class="card notMatched">
-                <figure class="faceDown"></figure>
-                <figure class="back spinBack"></figure>
-            </div>
-            <div class="card notMatched">
-                <figure class="faceDown"></figure>
-                <figure class="back spinBack"></figure>
-            </div>
-        </div>
-    </section>
+        </section>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="script.js"></script>
 </body>
