--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         </header>
         <section>
             <div class="counter">
-                <h3 class="counter-text">Number of turns: <span id="counter">0</span></h2>
+                <h3 class="counter-text">Turn Counter: <span id="counter">0</span></h2>
             </div>
             <div class="buttons">
-                <button id="easy-btn">Easy</button>
-                <button id="hard-btn">Hard</button>
-                <button id="reset-btn">Reset</button>
+                <button class="easy-btn active">Easy</button>
+                <button class="hard-btn">Hard</button>
+                <button class="reset-btn">Reset</button>
             </div>
         </section>
         <section>
