--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <header>
             <div class="title-text">
                 <h1 class="title">Music Memory!</h1>
+            </div>
+            <div>
                 <h2 class="lead">Find the matching pairs!</h2>
             </div>
         </header>
