--- a/index.html
+++ b/index.html
@@ -2,91 +2,90 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/app.css" type="text/css" />
-    <title>Music Memory</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/app.css" type="text/css" />
+  <title>Music Memory</title>
 </head>
 
 <body>
-    <div class="page-wrapper">
-
-        <header>
-            <div class="title-text">
-                <h1 class="title">Music Memory!</h1>
-            </div>
-            <div>
-                <h2 class="lead">Find the matching pairs!</h2>
-            </div>
-        </header>
-        <section>
-            <div class="counter">
-                <h3 class="counter-text">Turn Counter: <span id="counter">0</span></h2>
-            </div>
-            <div class="buttons">
-                <button class="easy-btn active">Easy</button>
-                <button class="hard-btn">Hard</button>
-                <button class="reset-btn">Reset</button>
-            </div>
-        </section>
-        <section>
-            <div class="game">
-                <div class="deck">
-                    <div class="card notMatched">
-                        <figure class="faceDown"></figure>
-                        <figure class="back spinBack"></figure>
-                    </div>
-                    <div class="card notMatched">
-                        <figure class="faceDown"></figure>
-                        <figure class="back spinBack"></figure>
-                    </div>
-                    <div class="card notMatched">
-                        <figure class="faceDown"></figure>
-                        <figure class="back spinBack"></figure>
-                    </div>
-                    <div class="card notMatched">
-                        <figure class="faceDown"></figure>
-                        <figure class="back spinBack"></figure>
-                    </div>
-                    <div class="card notMatched">
-                        <figure class="faceDown"></figure>
-                        <figure class="back spinBack"></figure>
-                    </div>
-                    <div class="card notMatched">
-                        <figure class="faceDown"></figure>
-                        <figure class="back spinBack"></figure>
-                    </div>
-                    <div class="card notMatched">
-                        <figure class="faceDown"></figure>
-                        <figure class="back spinBack"></figure>
-                    </div>
-                    <div class="card notMatched">
-                        <figure class="faceDown"></figure>
-                        <figure class="back spinBack"></figure>
-                    </div>
-                    <div class="card notMatched">
-                        <figure class="faceDown"></figure>
-                        <figure class="back spinBack"></figure>
-                    </div>
-                    <div class="card notMatched">
-                        <figure class="faceDown"></figure>
-                        <figure class="back spinBack"></figure>
-                    </div>
-                    <div class="card notMatched">
-                        <figure class="faceDown"></figure>
-                        <figure class="back spinBack"></figure>
-                    </div>
-                    <div class="card notMatched">
-                        <figure class="faceDown"></figure>
-                        <figure class="back spinBack"></figure>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="script.js"></script>
+  <div class="page-wrapper">
+    <header>
+      <div class="title-text">
+        <h1 class="title">Music Memory!</h1>
+      </div>
+      <div>
+        <h2 class="lead">Find the matching pairs!</h2>
+      </div>
+    </header>
+    <section>
+      <div class="counter-wrapper">
+        <h3 class="counter-text">Turn Counter: <span id="counter">0</span></h2>
+      </div>
+      <div class="buttons">
+        <button class="easy-btn active">Easy</button>
+        <button class="hard-btn">Hard</button>
+        <button class="reset-btn">Reset</button>
+      </div>
+    </section>
+    <section>
+      <div class="game">
+        <div class="deck">
+          <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back spinBack"></figure>
+          </div>
+          <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back spinBack"></figure>
+          </div>
+          <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back spinBack"></figure>
+          </div>
+          <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back spinBack"></figure>
+          </div>
+          <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back spinBack"></figure>
+          </div>
+          <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back spinBack"></figure>
+          </div>
+          <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back spinBack"></figure>
+          </div>
+          <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back spinBack"></figure>
+          </div>
+          <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back spinBack"></figure>
+          </div>
+          <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back spinBack"></figure>
+          </div>
+          <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back spinBack"></figure>
+          </div>
+          <div class="card notMatched">
+            <figure class="faceDown"></figure>
+            <figure class="back spinBack"></figure>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
