--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     </header>
     <div class="main">
       <aside class="instructions">
-        <h3>How to Play:</h3>
+        <h3 class="instructions-title">How to Play:</h3>
         <ul class="list">
-          <li>
+          <li class="list-item">
             Turn over 2 notes to find matching pairs
           </li>
-          <li>
+          <li class="list-item">
             Easy Mode: Colours help you to find the matching notes
           </li>
-          <li>
+          <li class="list-item">
             Hard Mode: No colours to help! Use your ears...
           </li>
         </ul>
