div sizing and layout

--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
 
 <body>
   <div class="page-wrapper">
-    <header>
-      <div class="title-text">
+    <header class="title-text">
         <h1 class="title">Music Memory!</h1>
-      </div>
     </header>
     <div class="main">
       <aside class="instructions">
         <h3 class="instructions-title">How to Play:</h3>
         <ul class="list">
           <li class="list-item">
-            Turn over 2 notes to find matching pairs
+            Flip 2 notes each turn to find matching pairs
           </li>
           <li class="list-item">
             Easy Mode: Colours help you to find the matching notes
