added css grid and styling

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h3 class="counter-text">Turns: <span id="counter">0</span></h2>
         </div>
         <div class="buttons">
-          <button class="easy-btn active">Easy</button>
+          <button class="easy-btn">Easy</button>
           <button class="hard-btn">Hard</button>
           <button class="reset-btn">Reset</button>
         </div>
