button hover effect and sound instruction

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <h3 class="instructions-title">How to Play:</h3>
         <ul class="list">
           <li class="list-item">
+            Make sure you have sound on to hear the notes
+          </li>
+          <li class="list-item">
             Flip 2 notes each turn to find matching pairs
           </li>
           <li class="list-item">
